--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -311,6 +311,10 @@ footer.sticky-bottom {
     color: var(--global-theme-color);
     font-size: 5rem;
   }
+  h2 {
+    color: var(--global-theme-color);
+    font-size: 2.5rem;
+  }
 }
 
 .post-list {
