--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>
     {%- if site.title == "blank" -%}
-        {%- capture title -%}{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}{%- endcapture -%}
+        {%- capture title -%}{{ site.first_name }} {{ site.last_name }}{%- endcapture -%}
     {%- else -%}
         {%- capture title -%}{{ site.title }}{%- endcapture -%}
     {%- endif -%}
@@ -24,7 +24,7 @@
         {{ title }}
     {%- endif -%}
     </title>
-    <meta name="author" content="{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}" />
+    <meta name="author" content="{{ site.first_name }} {{ site.last_name }}" />
     <meta name="description" content="{%- if page.description -%}{{ page.description }}{%- else -%}{{ site.description }}{%- endif -%}" />
 {%- if page.keywords or site.keywords %}
     <meta name="keywords" content="{%- if page.keywords -%}{{ page.keywords }}{%- else -%}{{ site.keywords }}{%- endif -%}" />
@@ -34,12 +34,12 @@
 
     <!-- OpenGraph -->
     <meta property="og:site_name" content="{{ title }}" />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="{%- if site.og_article_layouts contains page.layout -%}article{%- else -%}website{%- endif -%}"/>
     <meta property="og:title" content="{%- if page.title -%}{{ title }} | {{ page.title }}{%- else -%}{{ title }}{%- endif -%}" />
     <meta property="og:url" content="{{ page.url | prepend: site.baseurl | prepend: site.url | remove_first: 'index.html' }}" />
     <meta property="og:description" content="{%- if page.description -%}{{ page.description }}{%- else -%}{{ site.description }}{%- endif -%}" />
-    {% if page.og_image or site.og_image -%}
-    <meta property="og:image" content="{%- if page.og_image -%}{{ page.og_image }}{%- else -%}{{ site.og_image }}{%- endif -%}" />
+    {% if page.og_image or site.og_image or page.img -%}
+	    <meta property="og:image" content="{%- if page.og_image -%}{{ page.og_image }}{%- elsif page.img -%}{{ page.img | prepend: site.baseurl }}{%- else -%}{{ site.og_image }}{%- endif -%}" />
     {%- endif %}
     <meta property="og:locale" content="{{ site.lang }}" />
 
@@ -48,7 +48,7 @@
     <meta name="twitter:title" content="{%- if page.title -%}{{ page.title }}{%- else -%}{{ title }}{%- endif -%}" />
     <meta name="twitter:description" content="{%- if page.description -%}{{ page.description }}{%- else -%}{{ site.description }}{%- endif -%}" />
     {% if page.og_image or site.og_image -%}
-    <meta name="twitter:image" content="{%- if page.og_image -%}{{ page.og_image }}{%- else -%}{{ site.og_image }}{%- endif -%}" />
+    <meta name="twitter:image" content="{%- if page.og_image -%}{{ page.og_image }}{%- elsif page.img -%}{{ page.img | prepend: site.baseurl }}{%- else -%}{{ site.og_image }}{%- endif -%}" />
     {%- endif %}
     {% if site.twitter_username -%}
     <meta name="twitter:site" content="@{{ site.twitter_username }}" />
@@ -138,16 +138,28 @@
         "author":
         {
           "@type": "Person",
-          "name": "{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}"
+	  "name": "{{ site.first_name }} {{ site.last_name }}",
+	  "image": {
+	    "@type": "ImageObject",
+	    "url": "{{ site.profile_image | prepend: 'assets/img/' | relative_url }}",
+	    "width": 1000,
+	    "height": 1000
+	  },
+          {% if sameaslinks != blank -%}
+          "sameAs": {{ sameaslinks }}, 
+          {%- endif %}
+	  "url": "{{ site.url }}"
+        },
+	"publisher": {
+          "@type": "Organization",
+	  "name": " {%- if site.og_article_layouts contains page.layout -%}The Zanylytical Scientist{%- else -%}{{ site.first_name }} {{site.last_name}}{%- endif -%}",
+	  "url": "{%- if site.og_article_layouts contains page.layout -%}{{ site.url }}/blog{%- else -%}{{ site.url }}{%- endif -%}",
+	  "logo": "{{ site.og_image }}"
         },
         "url": "{{ page.url | prepend: site.baseurl | prepend: site.url }}",
-        "@type": "WebSite",
+        "@type": "{%- if site.og_article_layouts contains page.layout -%}Article{%- else -%}Website{%- endif -%}",
         "description": "{%- if page.description -%}{{ page.description }}{%- else if site.description -%}{{ site.description }}{%- endif -%}",
         "headline": "{%- if page.title -%}{{ page.title }}{%- else -%}{{ site.title }}{%- endif -%}",
-        {% if sameaslinks != blank -%}
-        "sameAs": {{ sameaslinks }}, 
-        {%- endif %}
-        "name": "{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}",
         "@context": "https://schema.org"
       }
     </script>
