--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -1,32 +1,39 @@
 ---
 ---
 <!-- _layouts/bib.html -->
+<!-- My change: start: Keep both abbr and preview image. The change based on https://github.com/alshedivat/al-folio/issues/1162#issuecomment-1473167678-->
 <div class="row">
-  <div class="col-sm-2 {% if entry.preview %}preview{% else %}abbr{% endif %}">
+  <div class="col-sm-2">
+    {%- if entry.abbr -%}
+    <div class="abbr">
+      {%- if site.data.venues[entry.abbr] -%}
+      {%- assign venue_style = nil -%}
+      {%- if site.data.venues[entry.abbr].color != blank -%}
+      {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"'
+      -%}
+      {%- endif -%}
+      <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a
+          href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
+      {%- else -%}
+      <abbr class="badge">{{entry.abbr}}</abbr>
+      {%- endif -%}
+    </div>
+    {%- endif -%}
     {%- if entry.preview -%}
-    {% if entry.preview contains '://' -%}
-    <img data-zoomable class="preview z-depth-1 rounded" src="{{ entry.preview }}">
-    {%- else -%}
-    {%- assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' -%}
-    {% include figure.html
-    path=entry_path
-    class="preview z-depth-1 rounded"
-    zoomable=true
-    alt=entry.preview -%}
-    {%- endif -%}
-    {%- elsif entry.abbr -%}
-    {%- if site.data.venues[entry.abbr] -%}
-    {%- assign venue_style = nil -%}
-    {%- if site.data.venues[entry.abbr].color != blank -%}
-    {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
-    {%- endif -%}
-    <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a
-        href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
-    {%- else -%}
-    <abbr class="badge">{{entry.abbr}}</abbr>
-    {%- endif -%}
+    <div class="preview">
+      {% if entry.preview contains '://' -%}
+      <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
+      {%- else -%}
+      {%- assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' -%}
+      {% include figure.html
+      path=entry_path
+      class="preview z-depth-1 rounded"
+      alt=entry.preview -%}
+      {%- endif -%}
+    </div>
     {%- endif -%}
   </div>
+  <!-- My change: end-->
 
   <!-- Entry bib key -->
   <div id="{{entry.key}}" class="col-sm-8">
