--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -1,50 +1,173 @@
-.timeline{
+.timeline {
 	img {
-	max-width:100%
+		max-width: 100%
 	}
+
 	.item {
-	padding-top:100px;
-	min-height:150px;
-	position:relative
+		padding-top: 100px;
+		min-height: 150px;
+		position: relative
 	}
-	.item:before,.last-item:after {
-	background:var(--global-bg-color);
-	border:8px solid var(--global-text-color);
-	border-radius:50%;
-	width:40px;
-	height:40px;
-	display:inline-block;
-	content:"";
-	margin-left:1rem;
-	position:relative;
-	z-index:1;
-	left:calc(2% - 36px)
+
+	.item:before,
+	.last-item:after {
+		background: var(--global-bg-color);
+		border: 8px solid var(--global-text-color);
+		border-radius: 50%;
+		width: 40px;
+		height: 40px;
+		display: inline-block;
+		content: "";
+		margin-left: 1rem;
+		position: relative;
+		z-index: 1;
+		left: calc(2% - 36px)
 	}
+
 	.vertical-line {
-	width:8px;
-	background-color:var(--global-text-color);
-	position:absolute;
-	left:calc(2% - 5px);
-	top:0;
-	bottom:0
+		width: 8px;
+		background-color: var(--global-text-color);
+		position: absolute;
+		left: calc(2% - 5px);
+		top: 0;
+		bottom: 0
 	}
+
 	.item .card-panel {
-	margin:0;
-	margin:2rem 0 0 3rem
+		margin: 0;
+		margin: 2rem 0 0 3rem
 	}
+
 	.item-date {
-	margin-top:-60px;
-	margin-left:4rem
+		margin-top: -60px;
+		margin-left: 4rem
 	}
-	.last-item{
-	padding-top:80px;
-	height:70px;
-	position:relative;
-	margin-left: 0.85rem
+
+	.last-item {
+		padding-top: 80px;
+		height: 70px;
+		position: relative;
+		margin-left: 0.85rem
 	}
+
 	.card-body {
-	display: grid;
-	grid-auto-flow: column;
-	grid-column-gap: 1rem
+		display: grid;
+		grid-auto-flow: column;
+		grid-column-gap: 1rem
 	}
 }
+
+
+// Horizontal Timeline
+
+/* Horizontal Timeline */
+/* Styling for the horizontal timeline card within .horizontal-timeline scope */
+.horizontal-timeline {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.horizontal-timeline-entry {
+	flex-basis: calc(33.33% - 20px);
+	/* Assuming you want 3 entries per row and each entry has a margin-right of 20px */
+	margin-right: 20px;
+	margin-bottom: 20px;
+	/* Space between rows */
+}
+
+/* Adjustments for the horizontal-timeline-card */
+//.horizontal-timeline .horizontal-timeline-card {
+//	display: flex;
+//	justify-content: center;
+//	align-items: center;
+//	width: 100%;
+//	height: 100%;
+//	/* Take up the full width of its container */
+//}
+
+//.horizontal-timeline .card-body {
+//	display: flex;
+//	flex-direction: column;
+//	height: 100%;
+//}
+//
+//.horizontal-timeline .logo-container {
+//	width: 100%;
+//	max-height: 70%;
+//	text-align: center;
+//	flex: 7;
+//}
+//
+//.horizontal-timeline .timeline-logo {
+//	max-width: 100%;
+//	margin: 0 auto;
+//}
+//
+//.horizontal-timeline .date-container {
+//	width: 100%;
+//	text-align: center;
+//	flex: 1.5;
+//}
+
+//.horizontal-timeline .card-body {
+//    display: flex;
+//    flex-direction: column;
+//	width: 100%;
+//}
+//
+//.horizontal-timeline .logo-container {
+//    text-align: center;
+//	height: 70%;
+//	width: 100%;
+//    //flex: 8; /* 70% of the space */
+//}
+//
+//.horizontal-timeline .timeline-logo {
+//    max-width: 100%;
+//	max-height: 100%;
+//    margin: 0 auto;
+//	display: block;
+//}
+//
+//.horizontal-timeline .date-container {
+//	width: 100%;
+//    text-align: center;
+//	height: 15%;
+//    //flex: 1; /* 15% of the space for each date container, adding up to 30% */
+//}
+
+
+// 3
+.horizontal-timeline .horizontal-timeline-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.horizontal-timeline .card-body {
+    display: grid;
+    grid-template-rows: 70% 15% 15%; /* This defines the height distribution */
+    width: 100%;
+    height: 200px; /* Adjust this as needed */
+    align-items: center;
+}
+
+.horizontal-timeline .logo-container {
+    width: 100%;
+    text-align: center;
+}
+
+.horizontal-timeline .timeline-logo {
+    max-width: 100%;
+    margin: 0 auto;
+    display: block;
+}
+
+.horizontal-timeline .date-container {
+    width: 100%;
+    text-align: center;
+}
+
